feat: add getBacklog & oauth persistence
Add temporary persist oauth
add required scope in oauth config
