# apps/api/api/routes/routes.go
@@ -24,7 +24,8 @@ func OauthRoutes(r *gin.Engine) {
 }
 
 func jiraRoutes(r *gin.Engine){
-	r.POST("/jira/projects", jira.GetProjects)
+	r.GET("/jira/projects", jira.GetProjects)
+	r.GET("/jira/:boardId/backlogs", jira.GetBacklogs)
 	// r.POST("/jira/<projectKey>/sprints", oauth.Callback)
 	// r.POST("/jira/<projectKey>/team", oauth.Callback) 
 	// r.POST("/jira/<projectKey>/dependency/", oauth.Callback)
