# apps/api/internal/jira/handler.go
@@ -1,8 +1,10 @@
 package jira
 
 import (
-	"sprint-copilot/config"
 	jira "sprint-copilot/internal/jira/service"
+	"strconv"
+
+	"sprint-copilot/internal/jira/oauth"
 
 	"github.com/gin-gonic/gin"
 )
@@ -13,22 +15,62 @@ import (
 // @Tags Jira
 // @Accept json
 // @Produce json
-// @Success 200 {object} interface{}
-// @Failure 401 {object} map[string]string
-// @Failure 500 {object} map[string]string
-// @Router /jira/projects [post]
+// @Success 200 {array} jira.ProjectResponse "List of Jira projects"
+// @Failure 401 {object} map[string]interface{} "Unauthorized"
+// @Failure 500 {object} map[string]interface{} "Internal server error"
+// @Router /jira/projects [get]
 func GetProjects(c *gin.Context) {
 
-	client := jira.NewClient(
-		config.JiraToken.AccessToken,
-		config.CloudID,
-	)
+	client, cloudID, err := oauth.GetOAuthClient(c.Request.Context())
+	if err != nil {
+		c.JSON(401, gin.H{"error": "not authenticated"})
+		return
+	}
 
-	projects, err := client.FetchProjects(c.Request.Context())
+	jiraClient := jira.NewClient(client,cloudID)
+
+	projects, err := jiraClient.FetchProjects(c.Request.Context())
 	if err != nil {
 		c.JSON(500, gin.H{"error": err.Error()})
 		return
 	}
 
 	c.JSON(200, projects)
+}
+
+// GetBacklogs godoc
+// @Summary Get Jira Backlog Issues
+// @Description Fetch all backlog issues for a specific Jira board
+// @Tags Jira
+// @Accept json
+// @Produce json
+// @Param boardId path int true "Board ID" minimum(1)
+// @Success 200 {array} jira.Ticket "List of backlog tickets"
+// @Failure 400 {object} map[string]interface{} "Invalid board ID"
+// @Failure 401 {object} map[string]interface{} "Unauthorized"
+// @Failure 500 {object} map[string]interface{} "Internal server error"
+// @Router /jira/backlogs/{boardId} [get]
+func GetBacklogs(c *gin.Context) {
+
+	httpClient, cloudID, err := oauth.GetOAuthClient(c.Request.Context())
+	if err != nil {
+		c.JSON(401, gin.H{"error": "not authenticated"})
+		return
+	}
+
+	client := jira.NewClient(httpClient, cloudID)
+
+	boardId := c.Param("boardId")
+	boardIdInt, err := strconv.Atoi(boardId)
+	if err != nil {
+		c.JSON(400, gin.H{"error": "invalid boardId"})
+		return
+	}
+
+	backlogs, err := client.FetchBacklogs(c.Request.Context(), boardIdInt)
+	if err != nil {
+		c.JSON(500, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(200, backlogs)
 }
